--- a/src/client/views/HomePage.html
+++ b/src/client/views/HomePage.html
@@ -13,7 +13,7 @@
         </ion-header>
 
         <div id="container">
-            <strong>Ready to create an app?</strong>
+            <strong>Ready to create an app with the model named {{ model.name }}?</strong>
             <p>Start with Ionic <a target="_blank" rel="noopener noreferrer"
                     href="https://ionicframework.com/docs/components">UI Components</a></p>
         </div>
