bring back reactivity

--- a/src/client/views/HomePage.html
+++ b/src/client/views/HomePage.html
@@ -16,6 +16,7 @@
             <strong>Ready to create an app with the model named {{ model.name }}?</strong>
             <p>Start with Ionic <a target="_blank" rel="noopener noreferrer"
                     href="https://ionicframework.com/docs/components">UI Components</a></p>
+            <div v-for="item of model.anotherExampleCommon">{{ item }}</div>
         </div>
     </ion-content>
 </ion-page>
