--- a/src/client/styles/HomePage.scss
+++ b/src/client/styles/HomePage.scss
@@ -1,25 +1,24 @@
 #container {
-    text-align: center;
-
     position: absolute;
-    left: 0;
-    right: 0;
     top: 50%;
+    right: 0;
+    left: 0;
     transform: translateY(-50%);
+
+    text-align: center;
 }
 
 #container strong {
-    font-size: 20px;
-    line-height: 26px;
+    font-size: 1.25em;
+    line-height: 1.625em;
 }
 
 #container p {
-    font-size: 16px;
-    line-height: 22px;
-
-    color: #8c8c8c;
-
     margin: 0;
+
+    font-size: 1em;
+    line-height: 1.375em;
+    color: #8c8c8c;
 }
 
 #container a {
