--- a/src/client/views/SimpleIcon.html
+++ b/src/client/views/SimpleIcon.html
@@ -1,3 +1,3 @@
-<div>
-    <ion-icon :slot="slot" :icon="icons[name]"></ion-icon>
+<div :slot="slot">
+    <ion-icon :icon="icons[name]"></ion-icon>
 </div>
